--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css/button.css">
 </head>
 <body>
-    <button class="btn">Please Role</button>
+    <button class="btn"><a href="https://www.shutterstock.com/search/rolling-weed"target="_blank">Please Roll</a></button>
 </body>
 </html>
